# flake8-pie

./: .flake8  .gitignore  .kodiak.toml  README.md  flake8_assign_and_return.py  flake8_pie.py  mypy.ini  pyproject.toml  setup.py  tests.py  tox.ini
.circleci/: config.yml
flake8_pie/: __init__.py  base.py  pie781_assign_and_return.py  pie783_celery_explicit_names.py  pie784_celery_crontab_args.py  pie785_celery_require_tasks_expire.py  pie786_precise_exception_handler.py  pie787_no_len_condition.py  pie788_no_bool_condition.py  pie789_prefer_isinstance_type_compare.py  pie790_no_unnecessary_pass.py  pie791_no_pointless_statements.py  pie792_no_inherit_object.py  pie793_prefer_dataclass.py  pie794_dupe_class_field_definitions.py  pie795_prefer_stdlib_enums.py  pie796_prefer_unique_enums.py  pie797_no_unnecessary_if_expr.py  pie798_no_unnecessary_class.py  pie799_prefer_col_init.py  pie800_no_unnecessary_spread.py  pie801_prefer_simple_return.py  pie802_prefer_simple_any_all.py  pie803_prefer_logging_interpolation.py  pie804_no_unnecessary_dict_kwargs.py  pie805_prefer_literal.py  pie805_prefer_short_condition.py  pie805_prefer_simple_iterator.py  pie806_no_assert_except.py  pie807_pefer_list_builtin.py  pie808_prefer_simple_range.py  pie809_django_prefer_bulk.py  pie810_single_starts_ends_with.py  test_utils.py  utils.py
flake8_pie/tests/: test_pie781_assign_and_return.py  test_pie783_celery_explicit_names.py  test_pie784_celery_crontab_args.py  test_pie785_celery_require_tasks_expire.py  test_pie786_precise_exception_handler.py  test_pie787_no_len_condition.py  test_pie788_no_bool_condition.py  test_pie789_prefer_isinstance_type_compare.py  test_pie790_no_unnecessary_pass.py  test_pie791_no_pointless_statements.py  test_pie792_no_inherit_object.py  test_pie793_prefer_dataclass.py  test_pie794_dupe_class_field_definitions.py  test_pie795_prefer_stdlib_enums.py  test_pie796_prefer_unique_enums.py  test_pie797_no_unnecessary_if_expr.py  test_pie798_no_unnecessary_class.py  test_pie799_prefer_col_init.py  test_pie800_no_unnecessary_spread.py  test_pie801_prefer_simple_return.py  test_pie802_prefer_simple_any_all.py  test_pie803_prefer_logging_interpolation.py  test_pie804_no_unnecessary_dict_kwargs.py  test_pie805_prefer_literal.py  test_pie805_prefer_short_condition.py  test_pie805_prefer_simple_iterator.py  test_pie806_no_assert_except.py  test_pie807_prefer_list_builtin.py  test_pie808_prefer_simple_range.py  test_pie809_django_prefer_bulk.py  test_pie810_single_starts_ends_with.py  utils.py
s/: lint  shell  test
