[tool.poetry]
name = "flake8-pie"
version = "0.6.1"
description = "A flake8 extension that implements misc. lints"
repository = "https://github.com/sbdchd/flake8-pie"
authors = ["Steve Dignam <steve@dignam.xyz>"]
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["flake8", "lint"]
classifiers=[
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Programming Language :: Python :: 3.6",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = ">=3.6.1"

[tool.poetry.dev-dependencies]
black = "^18.3-alpha.0"
flake8 = "^3.6"
setuptools = "^40.6"
wheel = "^0.32.3"
twine = "^1.12"
pytest-watch = "^4.2"
pytest = "^4.0"
ipython = "^7.2"
mypy = "^0.812.0"
astpretty = "^2.1"
isort = "^4.3"

[tool.poetry.plugins]
[tool.poetry.plugins."flake8.extension"]
PIE781 = "flake8_pie:Flake8PieCheck781"
PIE783 = "flake8_pie:Flake8PieCheck783"
PIE784 = "flake8_pie:Flake8PieCheck784"
PIE785 = "flake8_pie:Flake8PieCheck785"
PIE786 = "flake8_pie:Flake8PieCheck786"
PIE787 = "flake8_pie:Flake8PieCheck787"
PIE788 = "flake8_pie:Flake8PieCheck788"
PIE789 = "flake8_pie:Flake8PieCheck789"
PIE790 = "flake8_pie:Flake8PieCheck790"
PIE791 = "flake8_pie:Flake8PieCheck791"
PIE792 = "flake8_pie:Flake8PieCheck792"
PIE793 = "flake8_pie:Flake8PieCheck793"
PIE794 = "flake8_pie:Flake8PieCheck794"
PIE795 = "flake8_pie:Flake8PieCheck795"
PIE796 = "flake8_pie:Flake8PieCheck796"
PIE797 = "flake8_pie:Flake8PieCheck797"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
